# Filed

./: Cargo.toml  LICENSE  README.md
src/: main.rs  platform.rs  utils.rs  views.rs
src/components/: fileitem.rs
src/views/: explorer.rs
src/widgets/: fileitem.rs  mod.rs
